--- a/app/views/layouts/_messages.html.haml
+++ b/app/views/layouts/_messages.html.haml
@@ -1,3 +1,5 @@
 - flash.each do |name, msg|
-  - if msg.is_a?(String)
-    = content_tag :div, msg, :id => "flash_#{name}"
+   - if msg.is_a?(String)
+      .alert-box.success{"data-alert" => ""}
+         = content_tag :div, msg, :id => "flash_#{name}"
+         %a.close{href: "#"} ×
