--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -2,7 +2,7 @@
   %ul.title-area
     %li.name
       %h1
-        = link_to 'Home'
+        = link_to 'Home', root_path
     %li.toggle-topbar.menu-icon
       %a{:href => '#'} 
         %span Menu
