--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -13,7 +13,7 @@
           Currently waiting confirmation for: #{resource.unconfirmed_email}
       %div
         = f.label :password
-        %i (leave blank if you don't want to change it)
+        %i "(leave blank if you don't want to change it)"
         %br/
         = f.password_field :password, autocomplete: "off"
       %div
