--- a/app/views/properties/_form.html.haml
+++ b/app/views/properties/_form.html.haml
@@ -1,20 +1,10 @@
 = form_for @property do |f|
-  - if @property.errors.any?
-    #error_explanation
-      %h2
-        = pluralize(@property.errors.count, "error")
-        prohibited
-        this property from being saved:
-      %ul
-        - @property.errors.full_messages.each do |msg|
-          %li= msg
-  %p
-    = f.label :name
-    %br/
-    = f.text_field :name
-  %p
-    = f.label :description
-    %br/
-    = f.text_area :description
-  %p
-    = f.submit
+  .row
+    .large-12.columns
+      = f.label :name
+      = f.text_field :name
+  .row
+    .large-12.columns
+      = f.label :description
+      = f.text_area :description
+  = f.submit 'Update', :class => 'button small'
