--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -1,8 +1,9 @@
+= image_tag @user.avatar.url(:medium)
 .row
   .small-12.large-12.columns
     %h2
       Edit #{resource_name.to_s.humanize}
-    = form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
+    = form_for(resource, as: resource_name, url: registration_path(resource_name), html: { :multipart => true, method: :put }) do |f|
       = devise_error_messages!
       %div
         = f.label :email
@@ -16,6 +17,9 @@
         %i "(leave blank if you don't want to change it)"
         %br/
         = f.password_field :password, autocomplete: "off"
+        %br/
+        = f.file_field :avatar
+
       %div
         = f.label :password_confirmation
         %br/
