--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -1,6 +1,26 @@
-= image_tag @user.avatar.url(:medium)
 .row
-  .small-12.large-12.columns
+  .small-4.large-4.columns
+    %ul.side-nav
+      %li.active
+        %a{href: "#", onclick: "showDiv()"} General
+      %li
+        %a{href: "#picture"} Profile Picture
+      %li
+        %a{href: "#password"} Change Password
+      %li
+        %a{href: "#delete"} Delete Account
+        
+#general{style: "display:none;"} General
+#picture{style: "display:none;"} Profile Picture
+#password{style: "display:none;"} Change Password
+#delete{style: "display:none;"} Delete Account
+
+:javascript
+  function showDiv() {
+    document.getElementById('general').style.display = "block";}
+    
+    = image_tag @user.avatar.url(:medium)
+
     %h2
       Edit #{resource_name.to_s.humanize}
     = form_for(resource, as: resource_name, url: registration_path(resource_name), html: { :multipart => true, method: :put }) do |f|
