--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -1,56 +1,1 @@
-.row
-  .small-4.large-4.columns
-    %ul.side-nav
-      %li.active
-        %a{href: "#", onclick: "showDiv()"} General
-      %li
-        %a{href: "#picture"} Profile Picture
-      %li
-        %a{href: "#password"} Change Password
-      %li
-        %a{href: "#delete"} Delete Account
-        
-#general{style: "display:none;"} General
-#picture{style: "display:none;"} Profile Picture
-#password{style: "display:none;"} Change Password
-#delete{style: "display:none;"} Delete Account
-
-:javascript
-  function showDiv() {
-    document.getElementById('general').style.display = "block";}
-    
-    = image_tag @user.avatar.url(:medium)
-
-    %h2
-      Edit #{resource_name.to_s.humanize}
-    = form_for(resource, as: resource_name, url: registration_path(resource_name), html: { :multipart => true, method: :put }) do |f|
-      = devise_error_messages!
-      %div
-        = f.label :email
-        %br/
-        = f.email_field :email, autofocus: true
-      - if devise_mapping.confirmable? && resource.pending_reconfirmation?
-        %div
-          Currently waiting confirmation for: #{resource.unconfirmed_email}
-      %div
-        = f.label :password
-        %i "(leave blank if you don't want to change it)"
-        %br/
-        = f.password_field :password, autocomplete: "off"
-        %br/
-        = f.file_field :avatar
-
-      %div
-        = f.label :password_confirmation
-        %br/
-        = f.password_field :password_confirmation, autocomplete: "off"
-      %div
-        = f.label :current_password
-        %i (we need your current password to confirm your changes)
-        %br/
-        = f.password_field :current_password, autocomplete: "off"
-      %div= f.submit "Update"
-    %h3 Cancel my account
-    %p
-      Unhappy? #{button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete}
-    = link_to "Back", :back
+= render 'form'
