--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -10,13 +10,13 @@
     %ul.right
       - if user_signed_in?
         %li.divider
-        %li.main-nav{id: "properties-nav"}
+        %li.top-nav{id: "nav1"}
           = link_to "Properties", edit_user_registration_path
         %li.divider
-        %li.main-nav{id: "bookings-nav"}
+        %li.top-nav{id: "nav2"}
           = link_to "My Bookings", edit_user_registration_path
         %li.divider
-        %li.main-nav{id: "account-nav"}
+        %li.top-nav{id: "nav3"}
           = link_to "Account", edit_user_registration_path
         %li.divider
        
@@ -24,8 +24,8 @@
           = link_to "Logout", destroy_user_session_path, :method => :delete, class: "button small"
        
       - else 
-        %li
+        %li.top-nav{id: "nav4"}
           = link_to "Sign up", new_user_registration_path 
-        %li
+        %li.top-nav{id: "nav5"}
           = link_to 'Login',new_user_session_path
 
