--- a/app/views/devise/registrations/_form.html.haml
+++ b/app/views/devise/registrations/_form.html.haml
@@ -15,7 +15,7 @@
         %a{href: "#"} Delete Account
   .small-10.large-10.columns
     #p.panel
-      .main-content.loadingDiv
+      .main-content
         #general 
           = form_for(resource, as: resource_name, url: registration_path(resource_name), html: { :multipart => true, method: :put }) do |f|
             .row
