--- a/app/views/properties/edit.html.haml
+++ b/app/views/properties/edit.html.haml
@@ -1,4 +1,54 @@
+#preloader
+  #status  
+%br/
 .row
-  .small-6.large-6.columns
-    %h2= 'Edit a property'
-    = render 'form'
+.small-12.large-12.columns
+.row  
+  .small-3.large-3.columns
+    %ul.side-nav.menu-nav
+      %li.menu-nav-tab.active{id: "general-tab"}
+        %a{href: "#"} Headline
+      %li.menu-nav-tab{id: "location-tab"}
+        %a{href: "#"} Location
+      %li.menu-nav-tab{id: "media-tab"}
+        %a{href: "#"} Photos and Video
+      %li.menu-nav-tab{id: "descriptions-tab"}
+        %a{href: "#"} Descriptions
+      %li.menu-nav-tab{id: "statistics-tab"}
+        %a{href: "#"} Statistics
+        
+  .small-9.large-9.columns
+    .main-content
+      #general 
+        %h3.subheader= "Give us the lowdown"
+        %hr
+        = form_for @property do |f|
+          .row
+            .large-6.columns
+              = f.label :name
+              = f.text_field :name, :placeholder => "Something fancy I hope"
+            .large-6.columns
+              = f.label :property_type
+              = f.collection_select :property_type_id, PropertyType.order(:name),:id,:name, include_blank: true
+          .row
+            .large-12.columns
+              = f.label 'Headline' #TODO e.g. an amazing 3 storey villa with endless views to the sea
+              = f.text_area :description, :placeholder => "Make your place sing (but try to keep it short and sweet)"
+          = f.submit 'Update', :class => 'button small'
+      #location 
+        %h3.subheader= "Don't be shy now."
+        %hr
+        = form_for @property do |f|
+          .row
+            .large-6.columns
+              = f.label :country
+              = collection_select(nil, :country_id, @countries, :id, :name, {:prompt   => "Select a Country"})
+              = collection_select(nil, :region_id, @regions, :id, :name, {:prompt   => "Select a Region"})
+          = f.submit 'Update', :class => 'button small'
+      #media 
+        %h3.subheader= "Selfies optional"
+      #descriptions 
+        %h3.subheader= "In your own words. Tell us how it is."
+      #statistics 
+        %h3.subheader= "Monitor how you're doing"
+          
