--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,7 +12,7 @@
  *
  *= require_self
  *= require foundation_and_overrides
-
+ 
  */
 
 /* Preloader */
@@ -37,3 +37,6 @@
 	background-position:center;
 	margin:-100px 0 0 -100px; /* is width and height divided by two */
 }
+
+ 
+#map { position:fixed; top:80px; bottom:90px; width:600px; }
