Places added to Properties

--- a/app/views/properties/new.html.haml
+++ b/app/views/properties/new.html.haml
@@ -12,16 +12,40 @@
           = f.label :property_type
           = f.collection_select :property_type_id, PropertyType.order(:name),:id,:name, include_blank: true
       .row
+        .large-6.columns
+          .row
+            .large-4.columns
+              %span{style: "display: block;margin-top: 17px;"} Bedrooms:
+            .large-2.columns
+              %span#sliderOutput1{style: "display: block;margin-top: 17px;"}
+            .large-6.columns
+              .range-slider.round{"data-options" => "display_selector:#sliderOutput1; start: 1; end: 10;", "data-slider" => "", id: "bedroom-slider"}
+                %span.range-slider-handle
+                %span.range-slider-active-segment
+                = f.hidden_field :bedrooms, :id => "bedrooms-input"
+        .large-6.columns
+          .row
+            .large-4.columns
+              %span{style: "display: block;margin-top: 17px;"} Capacity:
+            .large-2.columns
+              %span#sliderOutput2{style: "display: block;margin-top: 17px;"}
+            .large-6.columns
+              .range-slider.round{"data-options" => "display_selector:#sliderOutput2; start: 1; end: 20;", "data-slider" => "", id: "capacity-slider"}
+                %span.range-slider-handle
+                %span.range-slider-active-segment
+                = f.hidden_field :capacity, :id => "capacity-input"
+      .row
         .large-12.columns
           = f.label :description
           = f.text_area :description, :placeholder => "Make your place sing (but try to keep it short and sweet)"
           
       .row
-        .large-6.columns
+        .large-4.columns
           = f.collection_select(:country_id, @countries, :id, :name, {:prompt   => "Select a Country"})
-        .large-6.columns
+        .large-4.columns
           = f.collection_select(:region_id, @regions, :id, :name, {:prompt   => ""})
-              
+        .large-4.columns
+          = f.collection_select(:place_id, @places, :id, :name, {:prompt   => ""})      
       = f.submit 'Save as draft', :class => 'button small'
   .small-6.large-6.columns    
     #map
