--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,19 +1,22 @@
 .row
-   .small-12.large-12.columns
-      %h2 Sign up
-      = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
-         = devise_error_messages!
-         = f.label :email
-         %br/
-         = f.email_field :email, autofocus: true
-         = f.label :password 
-         %br/
-         = f.password_field :password, autocomplete: "off"
-         = f.label :password_confirmation
-         %br/
-         = f.password_field :password_confirmation, autocomplete: "off"
-         
-         = f.submit "Sign up", :class => 'button'
-         
-      = render "devise/shared/links"
-     
+  .small-4.large-4.columns
+    &nbsp;
+  .small-4.large-4.columns
+    %h2 Sign up
+    = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
+      = devise_error_messages!
+      = f.label :email
+      %br/
+      = f.email_field :email, autofocus: true
+      = f.label :password 
+      %br/
+      = f.password_field :password, autocomplete: "off"
+      = f.label :password_confirmation
+      %br/
+      = f.password_field :password_confirmation, autocomplete: "off"
+
+      = f.submit "Sign up", :class => 'button'
+        
+    = render "devise/shared/links" 
+  .small-4.large-4.columns
+    &nbsp;  
