--- a/app/views/properties/new.html.haml
+++ b/app/views/properties/new.html.haml
@@ -1,13 +1,17 @@
 .row
   .small-6.large-6.columns
-    %h3= "Add a property"
-    %h4.subheader= "It won't go live until you push the big red button"
+    .row
+      .small-12.large-12.columns
+        %h3= "Add a property"
+        %h4.subheader= "It won't go live just yet"   
+    .row
     %hr
-    = form_for @property do |f|
+    = form_for @property, :html => {:data => {:abide => ''}} do |f|
       .row
         .large-6.columns
           = f.label :name
-          = f.text_field :name, :placeholder => "Something fancy I hope..."
+          = f.text_field :name, :placeholder => "Something fancy", :required => ''
+          %small.error Name is required
         .large-6.columns
           = f.label :property_type
           = f.collection_select :property_type_id, PropertyType.order(:name),:id,:name, include_blank: true
@@ -26,7 +30,7 @@
         .large-6.columns
           .row
             .large-4.columns
-              %span{style: "display: block;margin-top: 17px;"} Capacity:
+              %span{style: "display: block;margin-top: 17px;"} Sleeps:
             .large-2.columns
               %span#sliderOutput2{style: "display: block;margin-top: 17px;"}
             .large-6.columns
@@ -37,7 +41,7 @@
       .row
         .large-12.columns
           = f.label :description
-          = f.text_area :description, :placeholder => "Make your place sing (but try to keep it short and sweet)"
+          = f.text_area :description, :placeholder => "Make it sing"
           
       .row
         .large-4.columns
@@ -45,7 +49,13 @@
         .large-4.columns
           = f.collection_select(:region_id, @regions, :id, :name, {:prompt   => ""})
         .large-4.columns
-          = f.collection_select(:place_id, @places, :id, :name, {:prompt   => ""})      
-      = f.submit 'Save as draft', :class => 'button small'
+          = f.collection_select(:place_id, @places, :id, :name, {:prompt   => ""})    
+      .row
+        .large-12.columns
+      
+      .row
+        .large-12.columns
+          = f.submit 'Save', :class => 'button small', :id => "property_form"
+      
   .small-6.large-6.columns    
     #map
