--- a/app/views/properties/new.html.haml
+++ b/app/views/properties/new.html.haml
@@ -52,7 +52,7 @@
           = f.collection_select(:place_id, @places, :id, :name, {:prompt   => ""})    
       .row
         .large-12.columns
-      
+          = f.file_field :promo_image
       .row
         .large-12.columns
           = f.submit 'Save', :class => 'button small', :id => "property_form"
