--- a/app/views/properties/edit.html.haml
+++ b/app/views/properties/edit.html.haml
@@ -20,33 +20,12 @@
   .small-9.large-9.columns
     .main-content
       #general 
-        %h3.subheader= "The lowdown"
+        %h3.subheader= "General stuff"
         %hr
-        = form_for @property do |f|
-          .row
-            .large-6.columns
-              = f.label :name
-              = f.text_field :name, :placeholder => "Something fancy"
-            .large-6.columns
-              = f.label :property_type
-              = f.collection_select :property_type_id, PropertyType.order(:name),:id,:name, include_blank: true
-          .row
-            .large-12.columns
-              = f.label 'Headline' #TODO e.g. an amazing 3 storey villa with endless views to the sea
-              = f.text_area :description, :placeholder => "Make your place sing (but try to keep it short and sweet)"
-          = f.submit 'Update', :class => 'button small'
-      #location 
-        %h3.subheader= "Don't be shy now."
-        %hr
-        = form_for @property do |f|
-          .row
-            .large-6.columns
-              = f.collection_select(:country_id, @countries, :id, :name, {:prompt   => "Select a Country"})
-            .large-6.columns
-              = f.collection_select(:region_id, @regions, :id, :name, {:prompt   => ""})
-          = f.submit 'Update', :class => 'button small'
-      #media 
+        = render 'general'
+      #gallery 
         %h3.subheader= "Selfies optional"
+        %hr
       #descriptions 
         %h3.subheader= "In your own words. Tell us how it is."
       #statistics 
