--- a/app/views/properties/update_regions.js.haml
+++ b/app/views/properties/update_regions.js.haml
@@ -1,4 +1,5 @@
 $('#property_region_id').html("#{escape_javascript(options_for_select(@regions))}");
+$('#property_place_id').html("#{escape_javascript('')}");
 $('#lat').val('#{escape_javascript(@country_lat)}');
 $('#lng').val('#{escape_javascript(@country_lng)}');
 $('#zoom').val('#{escape_javascript(@country_zoom)}');
