--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -11,20 +11,27 @@
       - if user_signed_in?
         %li.divider
         %li.top-nav.has-dropdown{id: "nav1"}
-          = link_to "Properties", properties_path
+          = link_to properties_path do
+            %i.fa.fa-home
+            Properties
           %ul.dropdown
             %li
               = link_to "Add", new_property_path
         %li.top-nav{id: "nav2"}
           = link_to "Bookings"
         %li.divider
-        %li.top-nav{id: "nav3"}
-          = link_to "Account", edit_user_registration_path
+        %li.top-nav{id: "nav4"}
+          = link_to edit_user_registration_path do
+            %i.fa.fa-search
+            Search 
         %li.divider
-       
-        %li.has-form
-          = link_to "Logout", destroy_user_session_path, :method => :delete, class: "button small"
-       
+        %li.top-nav{id: "nav3"}
+          = link_to edit_user_registration_path do
+            %i.fa.fa-cogs
+        %li.divider
+        %li
+          = link_to destroy_user_session_path, :method => :delete do
+            %i.fa.fa-sign-out
       - else 
         %li.top-nav{id: "nav4"}
           = link_to "Sign up", new_user_registration_path 
