--- a/app/views/properties/_form.html.haml
+++ b/app/views/properties/_form.html.haml
@@ -1,68 +1,23 @@
-.row
-  .small-6.large-6.columns
-    .row
-      .small-12.large-12.columns
-        %h3= "Add a property"
-        %h4.subheader= "It won't go live just yet"   
-    .row
-    %hr
-    = form_for @property, :html => {:data => {:abide => ''}} do |f|
-      = f.hidden_field :lat, :id => "lat", :value => "1"
-      = f.hidden_field :lng, :id => "lng", :value => "1"
-      %input{id: "zoom", type: "hidden", value: "1"}
-      .row
-        .large-6.columns
-          = f.label :name
-          = f.text_field :name, :placeholder => "Something fancy", :required => ''
-          %small.error Name is required
-        .large-6.columns
-          = f.label :property_type
-          = f.collection_select :property_type_id, PropertyType.order(:name),:id,:name, include_blank: true
-      .row
-        .large-6.columns
-          .row
-            .large-4.columns
-              %span{style: "display: block;margin-top: 17px;"} Bedrooms:
-            .large-2.columns
-              %span#sliderOutput1{style: "display: block;margin-top: 17px;"}
-            .large-6.columns
-              .range-slider.round{"data-options" => "display_selector:#sliderOutput1; start: 1; end: 10;", "data-slider" => "", id: "bedroom-slider"}
-                %span.range-slider-handle
-                %span.range-slider-active-segment
-                = f.hidden_field :bedrooms, :id => "bedrooms-input"
-        .large-6.columns
-          .row
-            .large-4.columns
-              %span{style: "display: block;margin-top: 17px;"} Sleeps:
-            .large-2.columns
-              %span#sliderOutput2{style: "display: block;margin-top: 17px;"}
-            .large-6.columns
-              .range-slider.round{"data-options" => "display_selector:#sliderOutput2; start: 1; end: 20;", "data-slider" => "", id: "capacity-slider"}
-                %span.range-slider-handle
-                %span.range-slider-active-segment
-                = f.hidden_field :capacity, :id => "capacity-input"
-      .row
-        .large-12.columns
-          = f.label :description
-          = f.text_area :description, :placeholder => "Make it sing"
-          
+= form_for @property, :html => {:data => {:abide => ''}} do |f|
+  .row
+    %hr    
+    %input{id: "zoom", type: "hidden", value: "1"}
+  = render "general", :f=> f
+  = render "geo", :f=> f
+  .row
+    .large-12.columns
       .row
         .large-4.columns
-          = f.collection_select(:country_id, @countries, :id, :name, {:prompt   => "Select a Country"})
-        .large-4.columns
-          = f.select :region_id, ''
-        .large-4.columns
-          = f.select :place_id, ''
-      .row
-        .large-12.columns
-          .row
-            .large-3.columns
-              %label= 'Feature image:' 
-            .large-9.columns
-              = f.file_field :promo_image
-      .row
-        .large-12.columns
-          = f.submit 'Save', :class => 'button small', :id => "property_form"
-      
-  .small-6.large-6.columns
-    #map
+          %label= 'Choose a feature image:' 
+        .large-8.columns
+          = f.file_field :promo_image
+  .row
+    .large-12.columns
+      %hr
+  .row
+    .large-4.columns
+      = f.submit 'Save and continue', :class => 'button small', :id => "property_form", :value => "Save and continue", :name => "commit"
+    .large-4.columns
+      = f.submit 'Save for later', :class => 'button small secondary', :id => "property_form", :value => "Save for later", :name => "commit"
+    .large-4.columns
+      = link_to "Cancel", root_path, :class => 'button small alert right', :id => 'cancel'
