--- a/app/views/properties/new.html.haml
+++ b/app/views/properties/new.html.haml
@@ -4,7 +4,7 @@
       .small-12.large-12.columns
         %h3= "Add a property"
         %h4.subheader= "It won't go live just yet"   
-      = render 'form'
+      = render 'new_form'
   
   
   .small-6.large-6.columns
