--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -17,6 +17,8 @@
           %ul.dropdown
             %li
               = link_to "Add", new_property_path
+            %li
+              = link_to "Stats", new_property_path
         %li.top-nav{id: "nav2"}
           = link_to "Bookings"
         %li.divider
