--- a/app/views/properties/_location.html.haml
+++ b/app/views/properties/_location.html.haml
@@ -1,6 +1,6 @@
 = f.hidden_field :lat, :id => "lat", :value => "1"
 = f.hidden_field :lng, :id => "lng", :value => "1"
-      
+%input{id: "zoom", type: "hidden", value: "1"}      
 .row
   .large-4.columns
     = f.collection_select(:country_id, @countries, :id, :name, {:prompt   => "Select a Country"})
