--- a/app/views/properties/edit.html.haml
+++ b/app/views/properties/edit.html.haml
@@ -1,26 +1,44 @@
+%br/
 #preloader
   #status  
-.row
-  .small-12.large-12.columns
-    .row  
-      .small-3.large-3.columns
-        %ul.side-nav.menu-nav
-          %li.menu-nav-tab.active{id: "general-tab"}
-            %a{href: "#"} Headline
-          %li.menu-nav-tab{id: "location-tab"}
-            %a{href: "#"} Location
-          %li.menu-nav-tab{id: "media-tab"}
-            %a{href: "#"} Photos and Video
-          %li.menu-nav-tab{id: "descriptions-tab"}
-            %a{href: "#"} Descriptions
-          %li.menu-nav-tab{id: "statistics-tab"}
-            %a{href: "#"} Statistics  
-      .small-9.large-9.columns
-        = form_for @property, :html => {:data => {:abide => ''}} do |f|
-          .main-content
-            #general 
-              .small-9.large-9.columns
-                %h3.subheader= "General stuff"
-                %hr
-                = render "general", :f=> f
-          
+= form_for @property, :html => {:data => {:abide => ''}} do |f|
+  .row
+    .small-12.large-12.columns
+      .row  
+        .small-2.large-2.columns
+          %ul.side-nav.menu-nav
+            = image_tag @property.promo_image.url(:thumb)
+            %li.menu-nav-tab.active{id: "general-tab"}
+              %a{href: "#"} Headline
+            %li.menu-nav-tab{id: "location-tab"}
+              %a{href: "#"} Location
+            %li.menu-nav-tab{id: "gallery-tab"}
+              %a{href: "#"} Gallery
+            %li.menu-nav-tab{id: "descriptions-tab"}
+              %a{href: "#"} Descriptions
+            %li.menu-nav-tab{id: "statistics-tab"}
+              %a{href: "#"} Features  
+        .small-6.large-6.columns
+          .row
+            .large-12.columns
+              .main-content
+                #general 
+                  = render "general", :f=> f
+                #location
+                  = render "location", :f=> f
+                  .row
+                    .small-12.large-12.columns
+                      #edit-property-map
+                #gallery
+                  = render "gallery", :f=> f
+          .row
+            %br/
+            .large-6.columns
+              = f.submit 'Update', :class => 'button small', :id => "property_form"
+            .large-6.columns
+              = link_to "Cancel", root_path, :class => 'button small alert right', :id => 'cancel'
+        .small-4.large-4.columns
+          &nbsp
+
+             
+      
