general error handling

--- a/app/views/properties/_general.html.haml
+++ b/app/views/properties/_general.html.haml
@@ -27,7 +27,7 @@
         .range-slider.round{"data-options" => "display_selector:#sliderOutput1; start: 1; end: 10;", "data-slider" => "", id: "bedroom-slider"}
           %span.range-slider-handle
           %span.range-slider-active-segment
-          = f.hidden_field :bedrooms, :id => "bedrooms-input"
+          = f.hidden_field :bedrooms, :id => "bedroom-input"
   .large-6.columns
     .row
       .large-4.columns
