--- a/app/views/devise/registrations/_form.html.haml
+++ b/app/views/devise/registrations/_form.html.haml
@@ -11,6 +11,10 @@
         %a{href: "#"} Profile Picture
       %li.menu-nav-tab{id: "password-tab"}
         %a{href: "#"} Change Password
+      %li.menu-nav-tab{id: "personalisation-tab"}
+        %a{href: "#"} Personalisation
+      %li.menu-nav-tab{id: "notificationsS-tab"}
+        %a{href: "#"} Notifications
       %li.menu-nav-tab{id: "delete-tab"}
         %a{href: "#"} Delete Account
   .small-10.large-10.columns
