--- a/app/views/properties/_features.html.haml
+++ b/app/views/properties/_features.html.haml
@@ -1,21 +1,11 @@
-%dl.accordion{"data-accordion" => ""}
-  %dd
-    %a{href: "#panel1"} Amenities
-    #panel1.content.active
-      Boxes here
-  %dd
-    %a{href: "#panel2"} Kitchen & Dining
-    #panel2.content
-      Boxes here
-  %dd
-    %a{href: "#panel3"} Lounge
-    #panel3.content
-      Boxes here
-  %dd
-    %a{href: "#panel4"} Bathroom
-    #panel4.content
-      Boxes here
-  %dd
-    %a{href: "#panel5"} Outside
-    #panel5.content
-      Boxes here
+.row
+  .small-12.large-12.columns
+    %h6.subheader= 'General Amenities'
+    %hr/
+    .row
+      .small-12.large-12.columns
+        %label Check these out
+        %input#checkbox1{type: "checkbox"}/
+        %label{for: "checkbox1"} Checkbox 1
+        %input#checkbox2{type: "checkbox"}/
+        %label{for: "checkbox2"} Checkbox 2
