--- a/app/views/properties/_general.html.haml
+++ b/app/views/properties/_general.html.haml
@@ -15,14 +15,15 @@
             %i.fa.fa-photo
             Feature image
           %br/
-          = f.file_field :promo_image
+          = f.file_field :promo_image, :pattern => "^.+?\.(jpg|JPG|jpeg|JPEG|png|PNG|gif|GIF)$"
+          %small.error Needs to be an image: jpeg, jpg, gif or png
       .large-6.columns
         .panel.callout.radius
           %label
             %i.fa.fa-video-camera
             Feature video
           %br/
-          = f.file_field :promo_video
+          = f.file_field :promo_video, :pattern => "^.+?\.(avi|AVI|mp4|MP4|wmv|WMV)$"
 .row
   .large-6.columns
     .row
@@ -31,10 +32,11 @@
       .large-2.columns
         %span#sliderOutput1{style: "display: block;margin-top: 17px;"}
       .large-6.columns
+        = f.hidden_field :bedrooms, :id => "bedroom-input"
         .range-slider.round{"data-options" => "display_selector:#sliderOutput1; start: 1; end: 10;", "data-slider" => "", id: "bedroom-slider"}
           %span.range-slider-handle
           %span.range-slider-active-segment
-          = f.hidden_field :bedrooms, :id => "bedroom-input", :value => 1
+          
   .large-6.columns
     .row
       .large-4.columns
@@ -42,10 +44,11 @@
       .large-2.columns
         %span#sliderOutput2{style: "display: block;margin-top: 17px;"}
       .large-6.columns
+        = f.hidden_field :capacity, :id => "capacity-input"
         .range-slider.round{"data-options" => "display_selector:#sliderOutput2; start: 1; end: 20;", "data-slider" => "", id: "capacity-slider"}
           %span.range-slider-handle
           %span.range-slider-active-segment
-          = f.hidden_field :capacity, :id => "capacity-input", :value => 1
+          
 .row
   .large-12.columns
     = f.label :description
