--- a/app/views/properties/_general.html.haml
+++ b/app/views/properties/_general.html.haml
@@ -24,6 +24,7 @@
             Feature video
           %br/
           = f.file_field :promo_video, :pattern => "^.+?\.(avi|AVI|mp4|MP4|wmv|WMV)$"
+          %small.error Needs to be a video: avi, wmv, mp4
 .row
   .large-6.columns
     .row
