--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,22 +1,35 @@
+%br/
+%br/
+%br/
+%br/
+%br/
+%br/
+%br/
+
 .row
+  .small-8.large-8.columns
+    %h1= "Rent out your second home to friends, family, strangers"
+    %br/
+    %h4.subheader= "Villas, boat houses, apartments, castles. And everything in between."
+    %br/
+    = link_to 'Free. Upgraded plans from $2/m'
+    
   .small-4.large-4.columns
-    &nbsp;
-  .small-4.large-4.columns
-    %h2 Sign up
+    %h5.subheader Get started
     = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
       = devise_error_messages!
-      = f.label :email
-      %br/
-      = f.email_field :email, autofocus: true
-      = f.label :password 
-      %br/
-      = f.password_field :password, autocomplete: "off"
-      = f.label :password_confirmation
-      %br/
-      = f.password_field :password_confirmation, autocomplete: "off"
+      = f.email_field :email, autofocus: true, placeholder: 'Email address'
+      = f.password_field :password, autocomplete: "off", placeholder: 'Password'
+      = f.password_field :password_confirmation, autocomplete: "off", placeholder: 'Password confirmation'
 
-      = f.submit "Sign up", :class => 'button'
+      = f.submit "Sign me up", :class => 'button expand'
         
-    = render "devise/shared/links" 
-  .small-4.large-4.columns
-    &nbsp;  
+.row
+  .small-12.large-12.columns.text-center
+    %br/
+    %br/
+    %br/
+    %br/
+    %hr/
+    %h2= "Why you'll love lazyvista"
+    
