--- a/app/views/properties/_general.html.haml
+++ b/app/views/properties/_general.html.haml
@@ -7,26 +7,7 @@
     = f.label :property_type
     = f.collection_select :property_type_id, PropertyType.order(:name),:id,:name, {:include_blank => ''}, {:required => ''}
     %small.error Property type is required
--#
-  .row
-  .large-12.columns
-    .row
-      .large-6.columns
-        .panel.callout.radius
-          %label
-            %i.fa.fa-photo
-            Feature image
-          %br/
-          = f.file_field :promo_image, :pattern => "^.+?\.(jpg|JPG|jpeg|JPEG|png|PNG|gif|GIF)$"
-          %small.error Needs to be an image: jpeg, jpg, gif or png
-      .large-6.columns
-        .panel.callout.radius
-          %label
-            %i.fa.fa-video-camera
-            Feature video
-          %br/
-          = f.file_field :promo_video, :pattern => "^.+?\.(avi|AVI|mp4|MP4|wmv|WMV)$"
-          %small.error Needs to be a video: avi, wmv, mp4
+  = render 'gallery', :f=> f
 .row
   .large-6.columns
     .row
