--- a/app/views/properties/edit.html.haml
+++ b/app/views/properties/edit.html.haml
@@ -1,32 +1,31 @@
 %br/
-#preloader
-  #status  
-= form_for @property, :html => {:data => {:abide => ''}} do |f|
-  .row
-    .small-12.large-12.columns
-      .row  
-        .small-2.large-2.columns
-          = image_tag @property.promo_image.url(:thumb)
-          %ul.side-nav.menu-nav
-            %li.menu-nav-tab.active{id: "general-tab"}
-              %a{href: "#"} Headline
-            %li.menu-nav-tab{id: "location-tab"}
-              %a{href: "#"} Location
-            %li.divider
-            %li.menu-nav-tab{id: "gallery-tab"}
-              %a{href: "#"} Gallery
-            %li.menu-nav-tab{id: "descriptions-tab"}
-              %a{href: "#"} Descriptions
-            %li.menu-nav-tab{id: "features-tab"}
-              %a{href: "#"} Features
-            %li.divider
-            %li.menu-nav-tab{id: "prices-tab"}
-              %a{href: "#"} Prices
-            %li.menu-nav-tab{id: "availabilty-tab"}
-              %a{href: "#"} Availabilty  
-        .small-6.large-6.columns
-          .row
-            .large-12.columns
+.row
+  .small-12.large-12.columns
+    .row  
+      .small-3.large-3.columns
+        #promo-image
+          = render partial: 'promo_image'               
+        %ul.side-nav.menu-nav
+          %li.menu-nav-tab.active{id: "general-tab"}
+            %a{href: "#"} Headline
+          %li.menu-nav-tab{id: "location-tab"}
+            %a{href: "#"} Location
+          %li.divider
+          %li.menu-nav-tab{id: "gallery-tab"}
+            %a{href: "#"} Gallery
+          %li.menu-nav-tab{id: "descriptions-tab"}
+            %a{href: "#"} Descriptions
+          %li.menu-nav-tab{id: "features-tab"}
+            %a{href: "#"} Features
+          %li.divider
+          %li.menu-nav-tab{id: "prices-tab"}
+            %a{href: "#"} Prices
+          %li.menu-nav-tab{id: "availabilty-tab"}
+            %a{href: "#"} Availabilty  
+      .small-6.large-6.columns
+        .row
+          .large-12.columns
+            = form_for( @property, :html => {:data => {:abide => ''}, :id  => 'property-edit-form'}, remote: true) do |f|
               .main-content
                 #general 
                   = render "general", :f=> f
@@ -41,14 +40,12 @@
                   = render "gallery", :f=> f  
                 #features
                   = render "features", :f=> f             
-          .row
-            %br/
-            .large-6.columns
-              = f.submit 'Update', :class => 'button small', :id => "property_form"
-            .large-6.columns
-              = link_to "Cancel", root_path, :class => 'button small alert right', :id => 'cancel'
-        .small-4.large-4.columns
-          &nbsp
-
-             
+        .row
+          %br/
+          .large-6.columns
+          .large-6.columns
+            = link_to "Cancel", root_path, :class => 'button small alert right', :id => 'cancel'
+      .small-3.large-3.columns
+        &nbsp
+            
       
