general fixes and improvements

--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -43,5 +43,5 @@
       - else 
         %li.top-nav{id: "nav4"}
           = link_to "Sign up", new_user_registration_path 
-        %li.top-nav{id: "nav5"}
+        %li.top-nav.active{id: "nav5"}
           = link_to 'Login',new_user_session_path
