--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -44,7 +44,7 @@
     float: left;
     width: 100%;
     height: 400px;
-    margin-top: 125px;
+    margin-top: 75px;
     margin-right: 10px;
     border: 1px solid #bbb;
   }
@@ -58,3 +58,14 @@
     margin-right: 10px;
     border: 1px solid #bbb;
   }
+
+#overlay {
+    background-color: rgba(0, 0, 0, 0.8);
+    z-index: 999;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    display: none;
+}
