--- a/app/views/properties/edit.html.haml
+++ b/app/views/properties/edit.html.haml
@@ -1,3 +1,6 @@
+#overlay
+#preloader
+  #status
 %br/
 .row
   .small-12.large-12.columns
@@ -46,6 +49,6 @@
           .large-6.columns
             = link_to "Cancel", root_path, :class => 'button small alert right', :id => 'cancel'
       .small-3.large-3.columns
-        &nbsp
+        &nbsp;
             
       
