--- a/app/views/properties/new.html.haml
+++ b/app/views/properties/new.html.haml
@@ -1,26 +1,27 @@
-.row
-  .small-6.large-6.columns
-    .row
-      .small-12.large-12.columns
-        %h4= "Add a property"
-        %h5.subheader= "It won't go live just yet"   
-        = form_for @property, :html => {:data => {:abide => ''}} do |f|
-          .row
-            %hr    
-          = render "general", :f=> f
-          = render "location", :f=> f
-          .row
-            .large-12.columns
-              %hr
-          .row
-            .large-4.columns
-              = f.submit 'Save and continue', :class => 'button small', :id => "property_form", :value => "Save and continue", :name => "commit"
-            .large-4.columns
-              = f.submit 'Save for later', :class => 'button small secondary', :id => "property_form", :value => "Save for later", :name => "commit"
-            .large-4.columns
-              = link_to "Cancel", root_path, :class => 'button small alert right', :id => 'cancel'
-
-  
-  .small-6.large-6.columns
-    #new-property-map
-= render 'layouts/unsaved'
+= form_for @property, :html => {:data => {:abide => 'data-abide'}} do |f|
+  .row
+    .small-6.large-6.columns
+      .row
+        .small-12.large-12.columns
+          %h4= "Add a property"
+          %h5.subheader= "It won't go live just yet"   
+        .row
+          %hr    
+        = render "general", :f=> f
+        = render "location", :f=> f
+        %label= 'Select a promo image'
+        = f.file_field :promo_image, :id => "promo-image-upload", :accept => "image/png,image/gif,image/jpeg"
+            
+            
+      .row
+        %hr
+        .large-4.columns
+          = f.submit 'Save and continue', :class => 'button small', :id => "property_form", :value => "Save and continue", :name => "commit"
+        .large-4.columns
+          = f.submit 'Save for later', :class => 'button small secondary', :id => "property_form1", :value => "Save for later", :name => "commit"
+        .large-4.columns
+            
+          = link_to "Cancel", root_path, :class => 'button small alert right', :id => 'cancel'
+            
+    .small-6.large-6.columns
+      #new-property-map
