--- a/app/views/properties/new.html.haml
+++ b/app/views/properties/new.html.haml
@@ -16,9 +16,9 @@
       .row
         %hr
         .large-4.columns
-          = f.submit 'Save and continue', :class => 'button small', :id => "property_form", :value => "Save and continue", :name => "commit"
+          = f.submit 'Save and continue', :class => 'button small', :id => "property_form", :value => "continue", :name => "commit"
         .large-4.columns
-          = f.submit 'Save for later', :class => 'button small secondary', :id => "property_form1", :value => "Save for later", :name => "commit"
+          = f.submit 'Save for later', :class => 'button small secondary', :id => "property_form1", :value => "later", :name => "commit"
         .large-4.columns
             
           = link_to "Cancel", root_path, :class => 'button small alert right', :id => 'cancel'
