--- a/app/views/properties/edit.html.haml
+++ b/app/views/properties/edit.html.haml
@@ -28,21 +28,22 @@
       .small-6.large-6.columns
         .row
           .large-12.columns
-            = form_for( @property, :html => {:data => {:abide => ''}, :id  => 'property-edit-form'}, remote: true) do |f|
-              .main-content
-                #general 
-                  = render "general", :f=> f
-                #location
-                  = render "location", :f=> f
-                  .row
-                    .small-12.large-12.columns
-                      #edit-property-map
-                #gallery
-                  = render "gallery", :f=> f
-                #descriptions
-                  = render "gallery", :f=> f  
-                #features
-                  = render "features", :f=> f             
+            .main-content
+              #general
+                #general-form 
+                  = render "general"
+                = render "sliders"
+              #location
+                /= render "location"
+                .row
+                  .small-12.large-12.columns
+                    /#edit-property-map
+              #gallery
+                /= render "gallery"
+              #descriptions
+                /= render "gallery" 
+              #features
+                /= render "features", :f=> f             
         .row
           %br/
           .large-6.columns
